# poker

./: Cargo.toml  README.md  plan-flyio-deploy.prompt.md
crates/poker-client/: Cargo.toml
crates/poker-client/src/: client_controller.rs  game_state.rs  lib.rs  net_client.rs  session.rs  transport.rs
crates/poker-core/: Cargo.toml
crates/poker-core/src/: client_controller.rs  game_logic.rs  game_state.rs  lib.rs  net_client.rs  poker.rs  protocol.rs  server.rs  transport.rs  ws_transport.rs
crates/poker-gui/: Cargo.toml  Dioxus.toml  package-lock.json
crates/poker-gui/assets/: input.css  tailwind.css
crates/poker-gui/src/: app.rs  main.rs
crates/poker-server/: Cargo.toml
crates/poker-server/src/: game_logic.rs  main.rs  room.rs  ws_handler.rs
crates/poker-tui/: Cargo.toml
crates/poker-tui/src/: client.rs  main.rs  tui.rs
crates/poker-ui/: Cargo.toml
crates/poker-ui/src/: app_logic.rs  lib.rs
crates/poker-ui/src/components/: action_bar.rs  card.rs  connection_screen.rs  event_log.rs  game_log_overlay.rs  game_screen.rs  game_table.rs  mod.rs  player_list.rs
crates/poker-web/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
crates/poker-web/assets/: input.css  tailwind.css
crates/poker-web/public/: manifest.json  sw.js
crates/poker-web/src/: app.rs
