[package]
name = "poker-gui"
version = "0.1.0"
edition = "2024"
description = "Dioxus desktop GUI for the multiplayer poker app"
license = "MIT"

[[bin]]
name = "poker-gui"
path = "src/main.rs"

[dependencies]
poker-core = { path = "../poker-core" }
poker-ui = { path = "../poker-ui" }
dioxus = { version = "0.7", features = ["desktop"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
