[package]
name = "poker-server"
version = "0.1.0"
edition = "2024"
description = "Multi-room Axum-based poker server with WebSocket support"
license = "MIT"

[dependencies]
poker-core = { path = "../poker-core", features = ["native"] }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
