[package]
name = "poker-web"
version = "0.1.0"
edition = "2024"
description = "Dioxus web frontend for the multiplayer poker app"
license = "MIT"

[[bin]]
name = "poker-web"
path = "src/main.rs"

[dependencies]
poker-core = { path = "../poker-core", default-features = false, features = ["web"] }
poker-ui = { path = "../poker-ui" }
dioxus = { version = "0.7", features = ["web"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros"] }
web-sys = { version = "0.3", features = ["Window", "Location", "Storage"] }
gloo-timers = { version = "0.3", features = ["futures"] }
